elpa-elpa4/envs/dev/hint-service-ELPA4-237/service-app-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: hint
---
apiVersion: v1
kind: Service
metadata:
  name: metrics
spec:
  selector:
    app: hint
