elpa-elpa4/envs/dev/hint-service-ELPA4-237/admin-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hint-admin
spec:
  hosts:
    - "dev-hint-admin-elpa-elpa4.copsinop.de"
    - "dev-hint-admin.elpa-elpa4.svc.cluster.local"
  gateways:
    - istio-system/mesh-gateway
    - mesh
  http:
    - route:
        - destination:
            host: dev-service-hint-ELPA4-237
            port:
              number: 8081
